[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Fixes.gd" type="Script" id=3]

[node name="Fixes" type="Node2D" groups=["Menu"]]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Grid" type="GridContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 978.0
margin_bottom = 280.0
size_flags_horizontal = 7
theme = ExtResource( 2 )
columns = 2
script = ExtResource( 3 )

[node name="Mirror" type="Button" parent="Grid"]
margin_right = 429.0
margin_bottom = 42.0
size_flags_horizontal = 7
theme = ExtResource( 2 )
text = "Get New Mirrorlist(*)"

[node name="Shutfix" type="Button" parent="Grid"]
margin_left = 509.0
margin_right = 938.0
margin_bottom = 42.0
size_flags_horizontal = 7
text = "Long Shutdown Fix(*)"

[node name="Dolphin" type="Button" parent="Grid"]
margin_top = 62.0
margin_right = 429.0
margin_bottom = 104.0
size_flags_horizontal = 7
text = "Dolphin Open as Root(*)"

[node name="Pamac" type="Button" parent="Grid"]
margin_left = 509.0
margin_top = 62.0
margin_right = 938.0
margin_bottom = 104.0
size_flags_horizontal = 7
text = "Fix Pamac Installer(*)"

[node name="GPG" type="Button" parent="Grid"]
margin_top = 124.0
margin_right = 429.0
margin_bottom = 166.0
size_flags_horizontal = 7
text = "Apply Arch GPG Fix"

[node name="Wayland" type="Button" parent="Grid"]
margin_left = 509.0
margin_top = 124.0
margin_right = 938.0
margin_bottom = 166.0
size_flags_horizontal = 7
text = "Enable Wayland Session"

[node name="Back" type="Button" parent="."]
margin_left = 64.0
margin_top = 240.0
margin_right = 962.0
margin_bottom = 282.0
size_flags_horizontal = 7
theme = ExtResource( 2 )
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 64.0
margin_top = 296.0
margin_right = 962.0
margin_bottom = 392.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center](*) Those changes have already been applied if you are on the newer versions. Only apply them if you installed XeroLinux from an older .iso"
text = "(*) Those changes have already been applied if you are on the newer versions. Only apply them if you installed XeroLinux from an older .iso"

[connection signal="pressed" from="Grid/Mirror" to="Grid" method="_on_Mirror_pressed"]
[connection signal="pressed" from="Grid/Shutfix" to="Grid" method="_on_Shutfix_pressed"]
[connection signal="pressed" from="Grid/Dolphin" to="Grid" method="_on_Dolphin_pressed"]
[connection signal="pressed" from="Grid/Pamac" to="Grid" method="_on_Pamac_pressed"]
[connection signal="pressed" from="Grid/GPG" to="Grid" method="_on_GPG_pressed"]
[connection signal="pressed" from="Grid/Wayland" to="Grid" method="_on_Wayland_pressed"]
[connection signal="pressed" from="Back" to="Grid" method="_on_Back_pressed"]
